--- a/BuyMeWebParent/BuyMeBackEnd/src/main/resources/templates/index.html
+++ b/BuyMeWebParent/BuyMeBackEnd/src/main/resources/templates/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+	xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="viewport"
@@ -10,6 +11,7 @@
 <link rel="stylesheet" type="text/css"
 	th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" />
 <script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>
+<link rel="stylesheet" type="text/css" th:href="@{/fontawesome/all.css}"/>
 <script type="text/javascript"
 	th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
 </head>
@@ -42,15 +44,28 @@
 							</li>
 						<li class="nav-item"><a class="nav-link" th:href="@{/orders}">Orders</a>
 							</li>
-						<li class="nav-item"><a class="nav-link" th:href="@{/report}">Sales Report</a>
-							</li>
+						<li class="nav-item"><a class="nav-link" th:href="@{/report}">SalesReport</a>
+						</li>
 						<li class="nav-item"><a class="nav-link" th:href="@{/articles}">Articles</a>
 							</li>
 						<li class="nav-item"><a class="nav-link" th:href="@{/menus}">Menus</a>
 							</li>
 						<li class="nav-item"><a class="nav-link" th:href="@{/settings}">Settings</a>
 							</li>
+						<li>
+							<span class="fas fa-user fa-2x" style="color:white;"></span>
+						</li>
+						<li class="nav-item dropdown"><a class="nav-link dropdown-toggle" data-toggle="dropdown" sec:authentication="principal.fullname"></a>
+							<div class="dropdown-menu">
+								<a class="dropdown-item" id="logoutlink" href="">Logout</a>
+							</div>
+						</li>
+							
 					</ul>
+					<form th:action="@{/logout}" method="post" th:hidden="true" name="logoutForm">
+						<input type="submit" />
+					</form>
+					
 				</div>
 
 			</nav>
@@ -63,5 +78,14 @@
 			<h1>BuyMe Control Panel -Copyright &copy; BuyMe</h1>
 		</div>
 	</div>
+	<script type="text/javascript">
+		$(document).ready(function(){
+			$("#logoutlink").on("click",function(e){
+				e.preventDefault();
+				document.logoutForm.submit();
+			});
+		})
+	</script>
+	
 </body>
 </html>
