--- a/BuyMeWebParent/BuyMeBackEnd/src/main/resources/templates/login.html
+++ b/BuyMeWebParent/BuyMeBackEnd/src/main/resources/templates/login.html
@@ -1,3 +1,6 @@
+
+<!-- add request handling method for this page in the controller admin main controller -->
+
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
@@ -12,13 +15,16 @@
 
 </head>
 <body>
-	<div class="container-fluid text-center" style="background-image: radial-gradient( circle farthest-corner at 10% 20%,  rgba(37,145,251,0.98) 0.1%, rgba(0,7,128,1) 99.8% );">
+	<div class="container-fluid text-center" style="background-image: radial-gradient( circle farthest-corner at 10% 20%,  rgba(37,145,251,0.98) 0.1%, rgba(0,7,128,1) 99.8% ); height:700px">
 		<div>
-			<img  th:src="@{images/banner_image.png}" style="width:300px;height:200px;display: block;
+			<img  th:src="@{images/banner_image.png}" style="max-width:300px;height:200px;display: block;
  				 margin-left: auto;
-  					margin-right: auto;"/>
+  					margin-right: auto; margin-bottom:20px" class="container-fluid"/>
   			
-  			<form th:action="@{/login}" method ="post" style="max-width:350px; margin:0 auto;">
+  			<form th:action="@{/login}" method ="post" style="max-width:350px; margin:0 auto;background-color:white">
+  				<div th:if="${param.error}">
+  					<p class="text-danger">[[${session.SPRING_SECURITY_LAST_EXCEPTION.message}]]</p>
+  				</div>
   				<div class="border border-secondary rounded p-3">
   					<p>Access to buyme control panel</p>
   					<p>
