--- a/BuyMeWebParent/BuyMeBackEnd/src/main/resources/templates/login.html
+++ b/BuyMeWebParent/BuyMeBackEnd/src/main/resources/templates/login.html
@@ -25,6 +25,11 @@
   				<div th:if="${param.error}">
   					<p class="text-danger">[[${session.SPRING_SECURITY_LAST_EXCEPTION.message}]]</p>
   				</div>
+  				
+  				<div th:if="${param.logout}">
+  					<p class="text-warning">You have been logout successfully</p>
+  				</div>
+  				
   				<div class="border border-secondary rounded p-3">
   					<p>Access to buyme control panel</p>
   					<p>
