--- a/BuyMeWebParent/BuyMeBackEnd/src/main/resources/templates/index.html
+++ b/BuyMeWebParent/BuyMeBackEnd/src/main/resources/templates/index.html
@@ -11,6 +11,7 @@
 <link rel="stylesheet" type="text/css"
 	th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" />
 <script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>
+<script type="text/javascript" th:src="@{/js/common.js}"></script>
 <link rel="stylesheet" type="text/css" th:href="@{/fontawesome/all.css}"/>
 <script type="text/javascript"
 	th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
@@ -78,14 +79,7 @@
 			<h1>BuyMe Control Panel -Copyright &copy; BuyMe</h1>
 		</div>
 	</div>
-	<script type="text/javascript">
-		$(document).ready(function(){
-			$("#logoutlink").on("click",function(e){
-				e.preventDefault();
-				document.logoutForm.submit();
-			});
-		})
-	</script>
+	
 	
 </body>
 </html>
