--- a/BuyMeWebParent/BuyMeBackEnd/src/main/resources/templates/login.html
+++ b/BuyMeWebParent/BuyMeBackEnd/src/main/resources/templates/login.html
@@ -41,6 +41,9 @@
   					</p>
   					
   					<p>
+  						<input type="checkbox" name="remember-me"/>&nbsp;Remember Me
+  					</p>
+  					<p>
   						<input type="submit" value="login" class="btn btn-primary"/>
   					</p>
   				</div>
