user details functionality

--- a/BuyMeWebParent/BuyMeBackEnd/src/main/resources/templates/users.html
+++ b/BuyMeWebParent/BuyMeBackEnd/src/main/resources/templates/users.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="viewport"
@@ -11,6 +12,7 @@
 	th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" />
 <link rel="stylesheet" type="text/css" th:href="@{/fontawesome/all.css}"/>
 <script type="text/javascript" th:src="@{/webjars/jquery/jquery.min.js}"></script>
+<script type="text/javascript" th:src="@{/js/common.js}"></script>
 <script type="text/javascript"
 	th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
 </head>
@@ -49,7 +51,22 @@
 						</li>
 						<li class="nav-item"><a class="nav-link"
 							th:href="@{/settings}">Settings</a></li>
+						<li>
+							<span class="fas fa-user fa-2x" style="color:white;"></span>
+						</li>
+						<li class="nav-item dropdown"><a class="nav-link dropdown-toggle" data-toggle="dropdown"
+							th:href="@{/account}"
+						 sec:authentication="principal.fullname"></a>
+							<div class="dropdown-menu">
+								<a class="dropdown-item" id="logoutlink" href="">Logout</a>
+							</div>
+						</li>
+							
 					</ul>
+					<form th:action="@{/logout}" method="post" th:hidden="true" name="logoutForm">
+						<input type="submit" />
+					</form>			
+					
 				</div>
 
 			</nav>
