--- a/BuyMeWebParent/BuyMeBackEnd/src/main/resources/templates/index.html
+++ b/BuyMeWebParent/BuyMeBackEnd/src/main/resources/templates/index.html
@@ -56,7 +56,9 @@
 						<li>
 							<span class="fas fa-user fa-2x" style="color:white;"></span>
 						</li>
-						<li class="nav-item dropdown"><a class="nav-link dropdown-toggle" data-toggle="dropdown" sec:authentication="principal.fullname"></a>
+						<li class="nav-item dropdown"><a class="nav-link dropdown-toggle" data-toggle="dropdown"
+						th:href="@{/account}"
+						 sec:authentication="principal.fullname"></a>
 							<div class="dropdown-menu">
 								<a class="dropdown-item" id="logoutlink" href="">Logout</a>
 							</div>
