--- a/BuyMeWebParent/BuyMeBackEnd/src/main/resources/templates/account_form.html
+++ b/BuyMeWebParent/BuyMeBackEnd/src/main/resources/templates/account_form.html
@@ -27,7 +27,8 @@ xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 				</button>
 				<div class="collapse navbar-collapse" id="topNavbar">
 					<ul class="navbar-nav">
-						<li class="nav-item"><a class="nav-link" th:href="@{/users}">Users</a>
+						<li class="nav-item" sec:authorize="hasAuthority('Admin')">
+						<a class="nav-link" th:href="@{/users}">Users</a>
 						</li>
 						<li class="nav-item"><a class="nav-link"
 							th:href="@{/categories}">Categories</a></li>
@@ -47,7 +48,8 @@ xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 							th:href="@{/articles}">Articles</a></li>
 						<li class="nav-item"><a class="nav-link" th:href="@{/menus}">Menus</a>
 						</li>
-						<li class="nav-item"><a class="nav-link"
+						<li class="nav-item" sec:authorize="hasAuthority('Admin')">
+						<a class="nav-link"
 							th:href="@{/settings}">Settings</a></li>
 						<li class="nav-item dropdown"><a class="nav-link dropdown-toggle" data-toggle="dropdown"
 							th:href="@{/account}"
@@ -78,6 +80,7 @@ xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 			<div class="text-center">
 				<h1>Account Details</h1>
 			</div>
+			<div th:if="${message!=null}" class="alert alert-success text-center">[[${message}]]</div>
 			
 			<div class="border border-secondary rounded p-3">
 				
