--- a/BuyMeWebParent/BuyMeBackEnd/src/main/resources/templates/index.html
+++ b/BuyMeWebParent/BuyMeBackEnd/src/main/resources/templates/index.html
@@ -28,7 +28,8 @@
 				</button>
 				<div class="collapse navbar-collapse" id="topNavbar">
 					<ul class="navbar-nav">
-						<li class="nav-item"><a class="nav-link" th:href="@{/users}">Users</a>
+						<li class="nav-item" sec:authorize="hasAuthority('Admin')">
+						<a class="nav-link" th:href="@{/users}">Users</a>
 							</li>
 						<li class="nav-item"><a class="nav-link"
 							th:href="@{/categories}">Categories</a></li>
@@ -51,7 +52,8 @@
 							</li>
 						<li class="nav-item"><a class="nav-link" th:href="@{/menus}">Menus</a>
 							</li>
-						<li class="nav-item"><a class="nav-link" th:href="@{/settings}">Settings</a>
+						<li class="nav-item" sec:authorize="hasAuthority('Admin')">
+						<a class="nav-link" th:href="@{/settings}">Settings</a>
 							</li>
 						<li>
 							<span class="fas fa-user fa-2x" style="color:white;"></span>
@@ -74,11 +76,15 @@
 			</nav>
 		</div>
 		<div>
-			<h1>BuyMe Control Panel</h1>
+			<h2>BuyMe Control Panel</h2>
+			<h6>Welcome
+			<a th:href="@{/account}" style="color:white"
+				sec:authentication="principal.fullname"></a>&nbsp;&nbsp;<span sec:authentication="principal.authorities" style="color:white"></span></h6>
+	
 		</div>
 
 		<div>
-			<h1>BuyMe Control Panel -Copyright &copy; BuyMe</h1>
+			<p class="text-center">BuyMe Control Panel -Copyright &copy; BuyMe</p>
 		</div>
 	</div>
 	
