--- a/BuyMeWebParent/BuyMeBackEnd/src/main/resources/templates/user_form.html
+++ b/BuyMeWebParent/BuyMeBackEnd/src/main/resources/templates/user_form.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="viewport"
@@ -25,7 +26,8 @@
 				</button>
 				<div class="collapse navbar-collapse" id="topNavbar">
 					<ul class="navbar-nav">
-						<li class="nav-item"><a class="nav-link" th:href="@{/users}">Users</a>
+						<li class="nav-item" sec:authorize="hasAuthority('Admin')">
+						<a class="nav-link" th:href="@{/users}">Users</a>
 						</li>
 						<li class="nav-item"><a class="nav-link"
 							th:href="@{/categories}">Categories</a></li>
@@ -45,7 +47,8 @@
 							th:href="@{/articles}">Articles</a></li>
 						<li class="nav-item"><a class="nav-link" th:href="@{/menus}">Menus</a>
 						</li>
-						<li class="nav-item"><a class="nav-link"
+						<li class="nav-item" sec:authorize="hasAuthority('Admin')">
+						<a class="nav-link"
 							th:href="@{/settings}">Settings</a></li>
 					</ul>
 				</div>
