--- a/BuyMeWebParent/BuyMeBackEnd/src/main/resources/templates/users.html
+++ b/BuyMeWebParent/BuyMeBackEnd/src/main/resources/templates/users.html
@@ -29,7 +29,8 @@ xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 				</button>
 				<div class="collapse navbar-collapse" id="topNavbar">
 					<ul class="navbar-nav">
-						<li class="nav-item"><a class="nav-link" th:href="@{/users}">Users</a>
+						<li class="nav-item" sec:authorize="hasAuthority('Admin')">
+						<a class="nav-link" th:href="@{/users}">Users</a>
 						</li>
 						<li class="nav-item"><a class="nav-link"
 							th:href="@{/categories}">Categories</a></li>
@@ -49,14 +50,16 @@ xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 							th:href="@{/articles}">Articles</a></li>
 						<li class="nav-item"><a class="nav-link" th:href="@{/menus}">Menus</a>
 						</li>
-						<li class="nav-item"><a class="nav-link"
+						<li class="nav-item" sec:authorize="hasAuthority('Admin')">
+						<a class="nav-link"
 							th:href="@{/settings}">Settings</a></li>
 						<li>
 							<span class="fas fa-user fa-2x" style="color:white;"></span>
 						</li>
-						<li class="nav-item dropdown"><a class="nav-link dropdown-toggle" data-toggle="dropdown"
-							th:href="@{/account}"
-						 sec:authentication="principal.fullname"></a>
+						<li class="nav-item dropdown">
+							<a class="nav-link dropdown-toggle" data-toggle="dropdown"
+								th:href="@{/account}"
+							 sec:authentication="principal.fullname"></a>
 							<div class="dropdown-menu">
 								<a class="dropdown-item" id="logoutlink" href="">Logout</a>
 							</div>
