--- a/BuyMeWebParent/BuyMeBackEnd/src/main/resources/templates/categories/category_form.html
+++ b/BuyMeWebParent/BuyMeBackEnd/src/main/resources/templates/categories/category_form.html
@@ -84,6 +84,7 @@ xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 		<div>
 			<h1>Manage Categories | [[${pageTitle}]]</h1>
 		</div>
+
 		
 		<!-- enctype allows file upload for photo -->
 		<form th:action="@{/categories/save}" method="POST"
@@ -129,7 +130,7 @@ xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 					<label class="col-sm-4 col-form-label">Image:</label>
 					<div class="col-sm-8">
 						<input type="hidden" th:field="*{image}" />
-						<input type="file" id="fileImage" name="image" accept="image/png, image/jpeg"
+						<input type="file" id="fileImage" name="fileImage" accept="image/png, image/jpeg" required
 							class="mb-2"/>
 						
 						<div class="mt-2">
@@ -189,8 +190,8 @@ xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 			$("#fileImage").change(function(){
 				fileSize= this.files[0].size;
 				//alert("file size is " + fileSize)
-				if(fileSize > 1048576){
-					this.setCustomValidity("you must choose an image less than 1MB");
+				if(fileSize > 102400){
+					this.setCustomValidity("you must choose an image less than 100KB");
 					this.reportValidity();
 				}else{
 					this.setCustomValidity("");
