--- a/BuyMeWebParent/BuyMeBackEnd/src/main/resources/templates/categories/category_form.html
+++ b/BuyMeWebParent/BuyMeBackEnd/src/main/resources/templates/categories/category_form.html
@@ -130,11 +130,11 @@ xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 					<label class="col-sm-4 col-form-label">Image:</label>
 					<div class="col-sm-8">
 						<input type="hidden" th:field="*{image}" />
-						<input type="file" id="fileImage" name="fileImage" accept="image/png, image/jpeg" required
+						<input type="file" id="fileImage" name="fileImage" accept="image/png, image/jpeg" th:required="${category.imagePath == null}"
 							class="mb-2"/>
 						
 						<div class="mt-2">
-							<img id="thumbnail" alt="image preview" th:src="@{/images/image-thumbnail.png}"
+							<img id="thumbnail" alt="image preview" th:src="@{${category.imagePath}}"
 								class="img-fluid" />
 						</div>	
 					</div>
@@ -190,8 +190,8 @@ xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 			$("#fileImage").change(function(){
 				fileSize= this.files[0].size;
 				//alert("file size is " + fileSize)
-				if(fileSize > 102400){
-					this.setCustomValidity("you must choose an image less than 100KB");
+				if(fileSize > 102400 * 2){
+					this.setCustomValidity("you must choose an image less than 200KB");
 					this.reportValidity();
 				}else{
 					this.setCustomValidity("");
