sort cat and subcat by sortdir using name

--- a/BuyMeWebParent/BuyMeBackEnd/src/main/resources/templates/categories/categories.html
+++ b/BuyMeWebParent/BuyMeBackEnd/src/main/resources/templates/categories/categories.html
@@ -125,8 +125,10 @@ xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 			<thead class="thead-dark">
 				<tr>
 					<th>ID</th>
-					<th>Category Image</th>
-					<th>Category Name</th>
+					<th>
+						Category Image
+					</th>
+					<th><a class="text-white" th:href="@{'/categories?sortDir=' + ${reverseSortDir}}">Category Name</a></th>
 					<th>Alias</th>
 					<th>Enabled</th>
 					<th></th>
