--- a/BuyMeWebParent/BuyMeBackEnd/src/main/resources/templates/categories/categories.html
+++ b/BuyMeWebParent/BuyMeBackEnd/src/main/resources/templates/categories/categories.html
@@ -128,7 +128,10 @@ xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 					<th>
 						Category Image
 					</th>
-					<th><a class="text-white" th:href="@{'/categories?sortDir=' + ${reverseSortDir}}">Category Name</a></th>
+					<th>
+						<a class="text-white" th:href="@{'/categories?sortDir=' + ${reverseSortDir}}">Category Name</a>
+						<span th:class="${reverseSortDir =='desc' ? 'fas fa-sort-up' : 'fas fa-sort-down'}"></span>
+					</th>
 					<th>Alias</th>
 					<th>Enabled</th>
 					<th></th>
