--- a/BuyMeWebParent/BuyMeBackEnd/src/main/resources/templates/categories/categories.html
+++ b/BuyMeWebParent/BuyMeBackEnd/src/main/resources/templates/categories/categories.html
@@ -188,7 +188,40 @@ xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 			</div>
 		</div>
 	</div>
-
+	
+	<div class="text-center m-1" th:if="${totalItems > 0}">
+			<span>Showing users # [[${startCount}]] to [[${endCount}]] of [[${totalItems}]]</span>
+		</div>
+		<div class="text-center m-1" th:unless="${totalItems > 0}">
+			<span>No users found</span>
+		</div>
+	
+	<div th:if ="${totalPages > 1}">
+			<nav>
+	  			<ul class="pagination justify-content-center">
+	    		<li th:class="${currentPage > 1 ? 'page-item' : 'page-item disabled'}">
+	    			<a class="page-link" th:href="@{'/categories/page/1? + '&sortDir=' + ${sortDir} +${keyword != null ? '&keyword=' + keyword : ''}}">First</a>
+	    		</li>
+	    		<li th:class="${currentPage > 1 ? 'page-item' : 'page-item disabled'}">
+	    			<a class="page-link" th:href="@{'/categories/page/' + ${currentPage - 1}  + '&sortDir=' + ${sortDir} +${keyword != null ? '&keyword=' + keyword : ''}}">Previous</a>
+	    		</li>
+	    		
+	    		<li th:class="${currentPage != i ? 'page-item' : 'page-item active'}" 
+	    			th:each ="i: ${#numbers.sequence(1, totalPages)}">
+	    			<a class="page-link" th:href="@{'/categories/page/' + ${i} +  '&sortDir=' + ${sortDir} +${keyword != null ? '&keyword=' + keyword : ''}}">[[${i}]]</a>
+	    		</li>
+	   		 	
+	
+	    		<li th:class="${currentPage < totalPages ? 'page-item' : 'page-item disabled'}">
+	    			<a class="page-link" th:href="@{'/categories/page/' + ${currentPage + 1} + ${sortField} + '&sortDir=' + ${sortDir} +${keyword != null ? '&keyword=' + keyword : ''}}">Next</a>
+	    		</li>
+	    		<li th:class="${currentPage < totalPages ? 'page-item' : 'page-item disabled'}">
+	    			<a class="page-link" th:href="@{'/categories/page/' + ${totalPages} + '&sortDir=' + ${sortDir} +${keyword != null ? '&keyword=' + keyword : ''}}">Last</a>
+	    		</li>
+	  			</ul>
+			</nav>
+		</div>
+  
 <script type="text/javascript">
 
 	$(document).ready(function(){
