--- a/BuyMeWebParent/BuyMeFrontEnd/src/main/resources/templates/index.html
+++ b/BuyMeWebParent/BuyMeFrontEnd/src/main/resources/templates/index.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
-<html>
-<head>
-<meta charset="ISO-8859-1">
-<title>Welcome to BuyMe</title>
-</head>
+<html xmlns:th="http://www.thymeleaf.org">
+<head th:replace="fragments :: page_head('BuyMe', 'none')" />
 <body>
-<h1>Welcome to BuyMe Ecommerce App</h1>
+<div class="container-fluid">
+	<div th:replace="navigation :: header_menu"></div>
+	<div th:replace="navigation :: search_nav"></div>
+	<div>
+		<h1>Shopping by Categories</h1>
+	</div>
+	
+	<div class="row">
+		<div class="col-sm-2" th:each="cat : ${listCategories}">
+			<div><img th:src="@{${cat.imagePath}}" width="80" /></div>
+			<div>
+				<a th:href="@{'/c/' + ${cat.alias}}">[[${cat.name}]]</a>
+			</div>
+		</div>
+	</div>
+	
+	<div th:replace="navigation :: footer_menu"></div>
+</div>	
 </body>
 </html>
