--- a/BuyMeWebParent/BuyMeBackEnd/src/main/resources/templates/settings/states.html
+++ b/BuyMeWebParent/BuyMeBackEnd/src/main/resources/templates/settings/states.html
@@ -28,7 +28,8 @@
 	<div class="form-group row">
 		<label class="col-sm-2 col-form-label mt-2" id="labelStateName">State/Province Name:</label>
 		<div class="col-sm-6">
-			<input type="text" class="form-control mt-2" id="fieldStateName" />
+			<input type="text" class="form-control mt-2" id="fieldStateName" 
+			required minlength="3" maxlength="45"/>
 		</div>	
 		<div class="col-lg-4 mt-2">
 			<input type="button" id="buttonAddState" value="New" class="btn btn-secondary mr-2" />
